fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body{
     opacity: 0.8;
     padding: 20px;
     background-color: #060606;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
     
 h3{
